Completed map reduce pipeline